--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="canonical" href="https://b3f-prints.pages.dev/" />
 
     <!-- Favicon -->
-    <link rel="icon" href="/lovable-uploads/B3F.ico" type="image/x-icon" />
+    <link rel="icon" href="https://cmpggiyuiattqjmddcac.supabase.co/storage/v1/object/public/product-images/logo-image/icon/B3F.jpg" type="image/x-icon" />
 
     <!-- Google Site Verification -->
     <meta name="google-site-verification" content="SCfwC5ddISxv8yH_IY1SlhWB2WLlgjrxm-z9VItm-tg" />
@@ -21,14 +21,14 @@
     <meta property="og:description" content="Design and order custom printed t-shirts, mugs, and more from B3F Prints." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://b3f-prints.pages.dev/" />
-    <meta property="og:image" content="https://b3f-prints.pages.dev/lovable-uploads/B3F.jpg" />
+    <meta property="og:image" content="https://cmpggiyuiattqjmddcac.supabase.co/storage/v1/object/public/product-images/logo-image/icon/B3F.jpg" />
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@b3f_prints" />
     <meta name="twitter:title" content="B3F Prints - Custom Print Shop" />
     <meta name="twitter:description" content="Custom t-shirts, mugs, hoodies, and more by B3F Prints." />
-    <meta name="twitter:image" content="https://b3f-prints.pages.dev/lovable-uploads/B3F.jpg" />
+    <meta name="twitter:image" content="https://cmpggiyuiattqjmddcac.supabase.co/storage/v1/object/public/product-images/logo-image/icon/B3F.jpg" />
 
     <!-- Structured Data -->
     <script type="application/ld+json">
@@ -37,7 +37,7 @@
       "@type": "Organization",
       "name": "B3F Prints",
       "url": "https://b3f-prints.pages.dev/",
-      "logo": "https://b3f-prints.pages.dev/lovable-uploads/B3F.jpg",
+      "logo": "https://cmpggiyuiattqjmddcac.supabase.co/storage/v1/object/public/product-images/logo-image/icon/B3F.jpg",
       "sameAs": [
         "https://www.instagram.com/b3f_prints",
         "https://www.facebook.com/b3fprints"
