--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="canonical" href="https://b3f-prints.pages.dev/" />
 
     <!-- Favicon -->
-    <link rel="icon" href="https://cmpggiyuiattqjmddcac.supabase.co/storage/v1/object/public/product-images/logo-image/icon/B3F.jpg" type="image/x-icon" />
+    <link rel="icon" href="https://cmpggiyuiattqjmddcac.supabase.co/storage/v1/object/public/product-images/logo-image/icon/B3F.jpg" type="image/jpg" />
 
     <!-- Google Site Verification -->
     <meta name="google-site-verification" content="SCfwC5ddISxv8yH_IY1SlhWB2WLlgjrxm-z9VItm-tg" />
