--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
     <!-- IMPORTANT: DO NOT REMOVE THIS SCRIPT TAG OR THIS VERY COMMENT! -->
     <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
     <script type="module" src="/src/main.tsx"></script>
+      <script src = 'https://checkout.razorpay.com/v1/checkout.js'>
+        
+      </script>
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-BG8Z724L1F"></script>
 
     <script>
